--- a/Hoofdstukken/ontwerp/detail.tex
+++ b/Hoofdstukken/ontwerp/detail.tex
@@ -5,4 +5,4 @@
 \input{./Hoofdstukken/ontwerp/detail/module.tex}
 \input{./Hoofdstukken/ontwerp/detail/client.tex}
 \input{./Hoofdstukken/ontwerp/detail/problemen.tex}
-\input{./Hoofdstukken/ontwerp/detail/grafischebibliotheek.tex}
+%\input{./Hoofdstukken/ontwerp/detail/grafischebibliotheek.tex}
